Client: Fix message icon
The icon covers the beginning of the first sentence of the message (in some long messages).

--- a/client/src/core-components/message.scss
+++ b/client/src/core-components/message.scss
@@ -7,9 +7,7 @@
     overflow: hidden;
 
     &__icon {
-        position: absolute;
-        top: 13px;
-        left: 13px;
+        float: left;
     }
 
     &__title {
